# ITMOArchive

./: README.md
first semester (IS)/labwork1-ascorblack/: CMakeLists.txt  README.md  main.cpp
first semester (IS)/labwork2-ascorblack/: .gitignore  CMakeLists.txt  README.md  start_tests.sh
first semester (IS)/labwork2-ascorblack/lib/: number.cpp  number.h
first semester (IS)/labwork3-ascorblack/: CMakeLists.txt  README.md  main.cpp
first semester (IS)/labwork3-ascorblack/src/: args_parser.cpp  args_parser.h  bmp_writer.cpp  bmp_writer.h  sandy_matrix.cpp  sandy_matrix.h  tsv_reader.cpp  tsv_reader.h
first semester (IS)/labwork4-ascorblack/: CMakeLists.txt  README.md
first semester (IS)/labwork4-ascorblack/tests/: argparser_test.cpp
first semester (IS)/labwork5-ascorblack/: CMakeLists.txt  README.md
first semester (IS)/labwork5-ascorblack/lib/: Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ArrayData.cpp  ArrayData.h  CMakeLists.txt  uint17_t.cpp  uint17_t.h
first semester (IS)/labwork5-ascorblack/tests/: CMakeLists.txt  array_3d_test.cpp
first semester (IS)/labwork6-ascorblack/: .gitignore  CMakeLists.txt  README.md
first semester (IS)/labwork6-ascorblack/lib/: ArchiveFile.cpp  ArchiveFile.h  ArchiveHeader.cpp  ArchiveHeader.h  ArgParser.cpp  CMakeLists.txt  FileBlockReader.cpp  FileBlockReader.h  HammingArchiver.cpp  HammingArchiver.h  HammingDecoder.cpp  HammingDecoder.h  HammingEncoder.cpp  HammingEncoder.h
first semester (IS)/labwork6-ascorblack/tests/: CMakeLists.txt
second semester (IS)/labwork10-ascorblack/: CMakeLists.txt
second semester (IS)/labwork10-ascorblack/lib/: CMakeLists.txt  FutureResult.h  TTaskScheduler.cpp  TTaskScheduler.h  Task.h
second semester (IS)/labwork10-ascorblack/lib/std/: Function.h  any.h  forward.h  tuple.h
second semester (IS)/labwork10-ascorblack/tests/: CMakeLists.txt  TaskSchedulerTest.cpp
second semester (IS)/labwork11-ascorblack/: .gitignore  CMakeLists.txt  README.md
second semester (IS)/labwork11-ascorblack/lib/: CMakeLists.txt  Indexer.cpp  SearchEngine.cpp  SearchEngine.hpp
second semester (IS)/labwork11-ascorblack/lib/modules/arg_parser/: ArgParser.cpp  ArgParser.h  Argument.cpp  Parse.cpp
second semester (IS)/labwork11-ascorblack/lib/modules/indexator/: Indexator.hpp
second semester (IS)/labwork11-ascorblack/lib/modules/iterators/: StreamFileLines.h  StreamLetter.hpp  StreamRecursiveFile.h  StreamWords.hpp
second semester (IS)/labwork11-ascorblack/lib/modules/objects/: DocStorage.hpp  Document.hpp  PostingtListItem.hpp
second semester (IS)/labwork11-ascorblack/lib/modules/query_parser/: QueryParser.hpp
second semester (IS)/labwork11-ascorblack/lib/modules/utils/: FilesExtractor.hpp  FilterWord.hpp  PrefixTree.hpp  Utils.hpp  defines.hpp  logger.hpp
second semester (IS)/labwork7-ascorblack/: .gitignore  CMakeLists.txt  README.md
second semester (IS)/labwork7-ascorblack/lib/: ArgParser.cpp  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  WeatherAPI.cpp  WeatherAPI.h  WeatherApp.cpp  WeatherApp.h  WeatherDraw.cpp  WeatherDraw.h
second semester (IS)/labwork7-ascorblack/lib/src/: ArgParser.h  Help.cpp  Parse.cpp  SubMethods.cpp
second semester (IS)/labwork8-ascorblack/: CMakeLists.txt  README.md
second semester (IS)/labwork8-ascorblack/lib/: BinarySearchTreeSTL.cpp  BinarySearchTreeSTL.hpp  CMakeLists.txt
second semester (IS)/labwork9-ascorblack/: CMakeLists.txt
(+18 files in other folders)
